kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect5/025_weaving_in_kermeta_aspect5_baseClass.kmt
package weavinginvalidtest5;

require kermeta

using kermeta::standard

class A {


}

class B inherits A {}
class C inherits kermeta::kunit::Assert{

	attribute a : A
	attribute b : B

}
